Another project + integration tests

--- a/my-cargo-project/Cargo.toml
+++ b/my-cargo-project/Cargo.toml
@@ -5,3 +5,4 @@ authors = ["Roberto Casadei <robyonrails@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+another-cargo-project = { path = "../another-cargo-project/"} # local dependency to another package
